// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox Confirm - Cancel 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      Confirm
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
      <ui5-button
        data-action="Cancel"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Confirm 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
      <ui5-button
        data-action="Cancel"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Custom Action Text 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
      <ui5-button
        data-action="My Custom Action"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        My Custom Action
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Custom Button 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="0: custom action"
        design="Default"
        id="0"
        ui5-button=""
      >
        Custom
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Don't crash on unknown type 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="FOO_BAR"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      Unknown Type!
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Error 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="Error"
    header-text="Error"
    open="true"
    state="Error"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="Close"
        design="Transparent"
        id="0"
        ui5-button=""
      >
        Close
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Information 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="Information"
    header-text="Information"
    open="true"
    state="Information"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox No Title 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      No Title
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
      <ui5-button
        data-action="Cancel"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Not open 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="Success"
    header-text="Custom Success"
    state="Success"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      Custom Success
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Show 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Custom"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Custom
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      Custom
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="Yes"
        design="Transparent"
        id="0"
        ui5-button=""
      >
        Yes
      </ui5-button>
      <ui5-button
        data-action="No"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        No
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Success 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="Success"
    header-text="Success"
    open="true"
    state="Success"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Success w/ custom title 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Success"
    header-text="Custom Success"
    open="true"
    state="Success"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        name="add"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Custom Success
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      Custom Success
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox Warning 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="MessageBox-messageBox"
    data-type="Warning"
    header-text="Warning"
    open="true"
    state="Warning"
    ui5-dialog=""
  >
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`MessageBox undefined 1`] = `
<DocumentFragment>
  <ui5-dialog
    accessible-name-ref="1337-title 1337-text"
    class="MessageBox-messageBox"
    data-type="Confirm"
    header-text="Confirmation"
    open="true"
    state="None"
    ui5-dialog=""
  >
    <header
      class="MessageBox-header"
      slot="header"
    >
      <ui5-icon
        accessible-role="presentation"
        aria-hidden="true"
        name="sys-help-2"
        ui5-icon=""
      />
      <span
        class="MessageBox-spacer"
      />
      <ui5-title
        id="1337-title"
        level="H2"
        ui5-title=""
      >
        Confirmation
      </ui5-title>
    </header>
    <span
      class="Text-text"
      id="1337-text"
    >
      My Message Box Content
    </span>
    <footer
      class="MessageBox-footer"
      slot="footer"
    >
      <ui5-button
        data-action="OK"
        design="Emphasized"
        id="0"
        ui5-button=""
      >
        OK
      </ui5-button>
      <ui5-button
        data-action="Cancel"
        design="Transparent"
        id="1"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </footer>
  </ui5-dialog>
</DocumentFragment>
`;
